@@ -24,6 +24,7 @@ import java.util.concurrent.Executor;
 import java.util.function.Supplier;
 
 import jakarta.ws.rs.RuntimeType;
+import jakarta.ws.rs.core.EntityPart;
 import jakarta.ws.rs.core.MediaType;
 import jakarta.ws.rs.core.MultivaluedMap;
 import jakarta.ws.rs.core.Response;
@@ -112,7 +113,6 @@ public class RuntimeResourceDeployment {
     private final ServerSerialisers serialisers;
     private final ResteasyReactiveConfig resteasyReactiveConfig;
     private final Supplier<Executor> executorSupplier;
-    private final Supplier<Executor> virtualExecutorSupplier;
     private final RuntimeInterceptorDeployment runtimeInterceptorDeployment;
     private final DynamicEntityWriter dynamicEntityWriter;
     private final ResourceLocatorHandler resourceLocatorHandler;
@@ -132,7 +132,6 @@ public class RuntimeResourceDeployment {
         this.serialisers = info.getSerialisers();
         this.resteasyReactiveConfig = info.getResteasyReactiveConfig();
         this.executorSupplier = executorSupplier;
-        this.virtualExecutorSupplier = virtualExecutorSupplier;
         this.runtimeInterceptorDeployment = runtimeInterceptorDeployment;
         this.dynamicEntityWriter = dynamicEntityWriter;
         this.resourceLocatorHandler = resourceLocatorHandler;
@@ -185,9 +184,13 @@ public class RuntimeResourceDeployment {
 
         //setup reader and writer interceptors first
         ServerRestHandler interceptorHandler = interceptorDeployment.setupInterceptorHandler();
-        //we want interceptors in the abort handler chain
+        //we want interceptors in the abort handler chain, as the exception may have been thrown
+        //by a handler that runs before the interceptor handler (e.g. a security check)
         List<ServerRestHandler> abortHandlingChain = new ArrayList<>(
                 3 + (interceptorHandler != null ? 1 : 0) + (info.getPreExceptionMapperHandler() != null ? 1 : 0));
+        if (interceptorHandler != null) {
+            abortHandlingChain.add(interceptorHandler);
+        }
 
         List<ServerRestHandler> handlers = new ArrayList<>(HANDLERS_CAPACITY);
         // we add null as the first item to make sure that subsequent items are added in the proper positions
@@ -299,8 +302,7 @@ public class RuntimeResourceDeployment {
             List<ServerRestHandler> readBodyRequestFilters = new ArrayList<>(1);
             for (int i = handlers.size() - 2; i >= 0; i--) {
                 var serverRestHandler = handlers.get(i);
-                if (serverRestHandler instanceof ResourceRequestFilterHandler) {
-                    ResourceRequestFilterHandler resourceRequestFilterHandler = (ResourceRequestFilterHandler) serverRestHandler;
+                if (serverRestHandler instanceof ResourceRequestFilterHandler resourceRequestFilterHandler) {
                     if (resourceRequestFilterHandler.isWithFormRead()) {
                         readBodyRequestFilters.add(handlers.remove(i));
                     }
@@ -374,6 +376,7 @@ public class RuntimeResourceDeployment {
         addHandlers(handlers, clazz, method, info, HandlerChainCustomizer.Phase.BEFORE_METHOD_INVOKE);
         EndpointInvoker invoker = method.getInvoker().get();
         ServerRestHandler alternate = alternateInvoker(method, invoker);
+        //noinspection ReplaceNullCheck
         if (alternate != null) {
             handlers.add(alternate);
         } else {
@@ -429,7 +432,7 @@ public class RuntimeResourceDeployment {
                             handlers.add(new VariableProducesHandler(serverMediaType, serialisers));
                             score.add(ScoreSystem.Category.Writer, ScoreSystem.Diagnostic.WriterRunTime);
                         } else if (isSingleEffectiveWriter(buildTimeWriters)) {
-                            MessageBodyWriter<?> writer = buildTimeWriters.get(0);
+                            MessageBodyWriter<?> writer = buildTimeWriters.getFirst();
                             handlers.add(new FixedProducesHandler(mediaType, new FixedEntityWriter(
                                     writer, serialisers)));
                             if (writer instanceof ServerMessageBodyWriter)
@@ -650,7 +653,7 @@ public class RuntimeResourceDeployment {
                 MultipartFormParamExtractor.Type multiPartType = null;
                 Class<Object> typeClass = null;
                 Type genericType = null;
-                if (param.type.equals("jakarta.ws.rs.core.EntityPart")) {
+                if (param.type.equals(EntityPart.class.getName())) {
                     multiPartType = MultipartFormParamExtractor.Type.EntityPart;
                 } else if (param.type.equals(FileUpload.class.getName())) {
                     multiPartType = MultipartFormParamExtractor.Type.FileUpload;
